issue fixed #19866 Configurable product grid legend label overlapping
issue fixed #19866 Configurable product grid legend label overlapping

--- a/app/design/adminhtml/Magento/backend/Magento_Customer/web/css/source/_module.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Customer/web/css/source/_module.less
@@ -10,7 +10,7 @@
     .admin__field {
         legend {
             &.admin__field-label {
-                opacity: 1;
+                opacity: 0;
             }
         }
     }
